# ml-projects

./: .gitignore  README.md  pyproject.toml
learnings/: README.md  autograd_and_requires_grad.py  model_layers.py  transform_pipeline_demo.py
projects/fashion_mnist/: README.md  custom_image_dataset.py  main.py
projects/security_camera/: README.md  TODO.md  synthetic_motion_demo.py
