[project]
name = "computer-vision"
version = "0.1.0"
description = "Computer vision learning exercises with PyTorch and project notes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]
